Add notes file, stop page reloading when submitting deck entries

--- a/pairwise.html
+++ b/pairwise.html
@@ -21,6 +21,8 @@
 
 <p id="main">Here is where the text fields will be generated.</p>
 
+<p id="deck">Here is where the deck will be built.</p>
+
 <script src="pairwise.js">
 </script>
 
