--- a/pairwise.html
+++ b/pairwise.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 <body>
+  <script src="arrays.js">
+  </script>
 
 <h1>Pairwise deck creator</h1>
 
